--- a/pair.html
+++ b/pair.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" type="x-icon" href="./img/XLICON.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pair with me</title>
+  <title>Pair With Me</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <style>
     body {
@@ -13,7 +13,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://i.ibb.co/DkSbZPL/peakpx-1.jpg"); /* Set the background image */
+      background-image: url("https://i.ibb.co/DkSbZPL/peakpx-1.jpg");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -32,7 +32,7 @@
       padding: 20px;
       position: relative;
       text-align: center;
-      background-color: rgba(255,255,255,0.5);
+      background-color: rgba(255, 255, 255, 0.5);
       border-radius: 10px;
       transform: perspective(1000px) rotateY(0deg);
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
@@ -40,18 +40,17 @@
     }
 
     #text {
-  color: #000; /* Set the text color to black (#000) */
-}
+      color: #000;
+    }
 
-.input-container input {
-  color: #000; /* Set the text color to black (#000) */
-}
+    .input-container input {
+      color: #000;
+    }
 
-.centered-text {
-  color: #000; /* Set the text color to black (#000) */
-}
+    .centered-text {
+      color: #000;
+    }
 
-  
     .input-container {
       display: flex;
       background: white;
@@ -60,7 +59,7 @@
       box-shadow: 20px 20px 20px #d8d8d8, -10px -10px 20px #f8f8f8;
       padding: 0.3rem;
       gap: 0.3rem;
-      max-width: 300px; /* Set your desired maximum width */
+      max-width: 300px;
       width: 100%;
     }
 
@@ -117,8 +116,21 @@
     }
 
     .centered-text {
-    text-align: center;
-}
+      text-align: center;
+    }
+
+    #loading-indicator {
+      display: none; /* Hidden by default */
+      text-align: center;
+      margin-top: 10px;
+    }
+
+    /* Add focus styles for accessibility */
+    .input-container button:focus {
+      outline: 2px solid orange; /* Adjust as needed */
+      outline-offset: 2px;
+    }
+
   </style>
 </head>
 <body>
@@ -130,16 +142,19 @@
           <p>
             <h3 class="centered-text">Link with phone number</h3>
             <br>
-            <h6>Enter your number with country code.</h6>
-            <div class="input-container">
-                <input placeholder="+923184070915" type="number" id="number" placeholder="enter your phone number with country code" name="">
-                <button id="submit">enter</button>
+            <h6 class="centered-text">Enter your number with country code.</h6>
+            <form id="phone-form">
+              <div class="input-container">
+                <label for="number">Phone Number:</label>
+                <input placeholder="+15551234567" type="number" id="number" name="number" placeholder="Enter your phone number with country code">
+                <button type="submit" role="button" id="submit">Enter</button>
               </div>
-             
-              <a id="waiting-message" class="centered-text" style="display: none;">in process...</a>
-              <br>
-              <br>
-              <main id="pair"></main>
+            </form>
+            <div id="loading-indicator">Loading...</div>
+            <a id="waiting-message" class="centered-text" style="display: none;">In process...</a>
+            <br>
+            <br>
+            <main id="pair"></main>
           </p>
         </div>
       </div>
@@ -173,16 +188,17 @@
         /* Add styles for computer screens here */
       }
     }
-
-
   </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
   <script>
-    let a = document.getElementById("pair");
-    let b = document.getElementById("submit");
-    let c = document.getElementById("number");
-    let box = document.getElementById("box");
+    // Get references to elements
+    const pairElement = document.getElementById("pair");
+    const submitButton = document.getElementById("submit");
+    const phoneNumberInput = document.getElementById("number");
+    const boxElement = document.getElementById("box");
+    const loadingIndicator = document.getElementById("loading-indicator");
+    const phoneForm = document.getElementById("phone-form"); // Get the form element
 
     async function Copy() {
       let text = document.getElementById("copy").innerText;
@@ -198,36 +214,41 @@
       }, 500);
     }
 
-    b.addEventListener("click", async (e) => {
-      e.preventDefault();
-      if (!c.value) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">Enter your whatsapp number with country code.</a><br><br>';
-      } else if (c.value.replace(/[^0-9]/g, "").length < 11) {
-        a.innerHTML = '<a style="color:black;font-weight:bold">Invalid number format</a><br><br>';
-      } else {
-        const bc = c.value.replace(/[^0-9]/g, "");
-        let bb = "";
-        let bbc = "";
-        const cc = bc.split('');
-        cc.map(a => {
-          bbc += a;
-          if (bbc.length == 3) {
-            bb += " " + a;
-          } else if (bbc.length == 8) {
-            bb += " " + a;
-          } else {
-            bb += a;
-          }
-        });
-        c.type = "text";
-        c.value = "+" + bb;
-        c.style = "color:black;font-size:20px";
-        a.innerHTML = '<a style="color:black;font-weight:bold">Please wait for some time</a><br><br>';
-        let { data } = await axios(`/code?number=${bc}`);
-        let code = data.code || "Service Unavailable";
-        a.innerHTML = '<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:black;font-weight:bold">' + code + '</span></font><br><br><br>';
+    phoneForm.addEventListener("submit", async (e) => {
+      e.preventDefault(); // Prevent the default form submission
+
+      // Show loading indicator
+      loadingIndicator.style.display = "block";
+      pairElement.innerHTML = ""; // Clear previous messages
+
+      if (!phoneNumberInput.value) {
+        pairElement.innerHTML = '<a style="color:black;font-weight:bold">Enter your WhatsApp number with country code.</a><br><br>';
+        loadingIndicator.style.display = "none"; // Hide loading indicator
+        return;
+      }
+
+      const phoneNumber = phoneNumberInput.value.replace(/[^0-9]/g, "");
+
+      if (phoneNumber.length < 11) {
+        pairElement.innerHTML = '<a style="color:black;font-weight:bold">Invalid number format</a><br><br>';
+        loadingIndicator.style.display = "none"; // Hide loading indicator
+        return;
+      }
+
+      try {
+        // Make the Axios request
+        const { data } = await axios(`/code?number=${phoneNumber}`);
+        const code = data.code || "Service Unavailable";
+
+        pairElement.innerHTML = `<font id="copy" onclick="Copy()" style="color:red;font-weight:bold" size="5">CODE: <span style="color:black;font-weight:bold">${code}</span></font><br><br><br>`;
+
+      } catch (error) {
+        console.error("Error:", error);
+        pairElement.innerHTML = '<a style="color:black;font-weight:bold">An error occurred. Please try again.</a><br><br>';
+      } finally {
+        loadingIndicator.style.display = "none"; // Hide loading indicator
       }
     });
   </script>
 </body>
-</html>
+  </html>
